fix unneccesary scrollbars and increase player thumbnail size for landscape mode, add image fallback on error

--- a/src/stylesheets/home.css
+++ b/src/stylesheets/home.css
@@ -144,7 +144,7 @@
 
       img {
         margin: auto;
-        height: 6.6rem;
+        max-height: 7rem;
         width: auto;
       }
 
